# dotrs

./: Cargo.toml
assets/: dothist
dot-cli/: Cargo.toml
dot-lib/: Cargo.toml
dot-srv/: Cargo.toml
src/: config.rs  error.rs  lib.rs
src/cli/: complete.rs  mod.rs
src/cli/helper/: complete.rs  highlight.rs  hint.rs  mod.rs  validate.rs
src/client/: mod.rs
src/fmt/: mod.rs
